Fix alignment?

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -99,5 +99,5 @@ h6:hover .header-link {
 }
 
 h2, h3, h4, h5, h6 {
-  left: -1em;
+  margin-left: -1em;
 }
